// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API Create Job 1`] = `
{
  "link": null,
  "name": "JOB_1",
  "referenceID": "4711",
  "startDateTime": "2025-01-01T12:00:00Z",
  "status": "requested",
  "version": "1",
}
`;

exports[`API Create Job 2`] = `
{
  "link": null,
  "name": "JOB_1",
  "referenceID": "4711",
  "startDateTime": "2025-01-01T12:00:00Z",
  "status": "requested",
  "version": "1",
}
`;

exports[`API Create Job 3`] = `
[
  {
    "name": "A",
    "value": "abcd",
  },
  {
    "name": "C",
    "value": "true",
  },
  {
    "name": "D",
    "value": "32",
  },
  {
    "name": "E",
    "value": "2025-01-01T00:00:00Z",
  },
]
`;

exports[`API GET Job 1`] = `
[
  {
    "link": "https://sap.com",
    "name": "JOB_1",
    "referenceID": "7158cbab-a42b-4cb9-9656-8db72521d13d",
    "startDateTime": "2025-01-01T12:00:00Z",
    "status": "requested",
    "version": "1",
  },
  {
    "link": "https://sap.com",
    "name": "JOB_2",
    "referenceID": "8158cbab-a42b-4cb9-9656-8db72521d13d",
    "startDateTime": "2025-01-02T12:00:00Z",
    "status": "running",
    "version": "1",
  },
  {
    "link": "https://sap.com",
    "name": "JOB_3",
    "referenceID": "9158cbab-a42b-4cb9-9656-8db72521d13d",
    "startDateTime": "2025-01-02T12:00:00Z",
    "status": "completedWithError",
    "version": "1",
  },
]
`;

exports[`API GET Job 2`] = `
{
  "link": "https://sap.com",
  "name": "JOB_1",
  "referenceID": "7158cbab-a42b-4cb9-9656-8db72521d13d",
  "startDateTime": "2025-01-01T12:00:00Z",
  "status": "requested",
  "version": "1",
}
`;

exports[`API GET Job Definitions 1`] = `
[
  {
    "description": "Job Definition 1",
    "name": "JOB_1",
    "version": "1",
  },
  {
    "description": "Job Definition 2",
    "name": "JOB_2",
    "version": "1",
  },
  {
    "description": "Job Definition 3",
    "name": "JOB_3",
    "version": "1",
  },
]
`;

exports[`API GET Job Definitions 2`] = `
{
  "description": "Job Definition 1",
  "name": "JOB_1",
  "version": "1",
}
`;

exports[`API GET Job Parameter Definitions 1`] = `
[
  {
    "dataType": "string",
    "description": "Parameter A",
    "jobName": "JOB_1",
    "mappingType": null,
    "name": "A",
    "required": true,
    "type": "writableValue",
    "value": "ABC",
  },
  {
    "dataType": "number",
    "description": "Parameter B",
    "jobName": "JOB_1",
    "mappingType": null,
    "name": "B",
    "required": false,
    "type": "readOnlyValue",
    "value": "21",
  },
  {
    "dataType": "boolean",
    "description": "Parameter C",
    "jobName": "JOB_1",
    "mappingType": "testRun",
    "name": "C",
    "required": true,
    "type": "mapping",
    "value": "0",
  },
  {
    "dataType": "number",
    "description": "Parameter D",
    "jobName": "JOB_1",
    "mappingType": null,
    "name": "D",
    "required": false,
    "type": "writableValue",
    "value": "22",
  },
  {
    "dataType": "datetime",
    "description": "Parameter E",
    "jobName": "JOB_1",
    "mappingType": null,
    "name": "E",
    "required": false,
    "type": "writableValue",
    "value": "2025-01-01T00:00:00Z",
  },
]
`;

exports[`API GET Job Parameters 1`] = `
[
  {
    "name": "A",
    "value": "ABC",
  },
  {
    "name": "B",
    "value": "11",
  },
  {
    "name": "C",
    "value": "true",
  },
  {
    "name": "D",
    "value": "12",
  },
  {
    "name": "E",
    "value": "2025-01-02T00:00:00Z",
  },
]
`;

exports[`API GET Job Result Messages 1`] = `
[
  {
    "resultID": "c2eb590f-9505-4fd6-a5e2-511a1b2ff47f",
    "severity": "error",
    "text": "This is an error",
  },
  {
    "resultID": "c2eb590f-9505-4fd6-a5e2-511a1b2ff47f",
    "severity": "warning",
    "text": "This is a warning",
  },
  {
    "resultID": "c2eb590f-9505-4fd6-a5e2-511a1b2ff47f",
    "severity": "info",
    "text": "This is a information",
  },
]
`;

exports[`API GET Job Results 1`] = `
[
  {
    "filename": null,
    "link": "https://sap.com",
    "mimeType": null,
    "name": "Link",
    "type": "link",
  },
  {
    "filename": "test.txt",
    "link": null,
    "mimeType": "plain/text",
    "name": "Data",
    "type": "data",
  },
  {
    "filename": null,
    "link": null,
    "mimeType": null,
    "name": "Message",
    "type": "message",
  },
]
`;

exports[`API Open API GET API Docs Root 1`] = `
"<!DOCTYPE html>
<html>
    <head>
        <title>@cap-js-community/sap-afc-sdk 0.1.0</title>
        <meta name="color-scheme" content="dark light">
        <style>
body {
  font-family: Avenir Next, sans-serif;
  background: #f8fbff;
}

body #welcome {
  margin: 30px auto 50px;
  padding: 0 30px;
  max-width: 900px;
}

body #welcome h1, #welcome h3, #welcome h2, #welcome p {
  margin: 20px 0;
  color: #47637d;
  font-weight: 400;
}

body #welcome h3.header {
  margin: 20px 0 0 0;
  background-color: #537492;
  color: white;
}

body #welcome h3 a {
  color: inherit;
  font-weight: 500;
}

body #welcome h3 a span {
  padding: 5px 15px;
  font-weight: 300;
  transition: all 0.2s ease-in;
}

body #welcome h3 a:first-child span {
  display: inline-block;
  padding: 5px 15px;
}

body #welcome h3 a span:hover {
  color: #92b2d0;
}

body #welcome ul {
  margin: 0;
  background: #91adc5;
  list-style-type: none;
  padding-inline-start: 20px;
}

body #welcome li {
  display: inline-grid;
  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
  width: 100%;
  margin-bottom: 1px;
  background-color: #d0e9ff;
  padding: 0;
  /*
  -moz-transition: background color 0.2s ease-in;
  -webkit-transition: background 0.2s ease-in;
  -o-transition: background 0.2s ease-in;
  /* Standard */
  transition: all 0.1s ease-in;
}

body #welcome ul li div:not(:first-child) a {
  font-weight: 300;
}

body #welcome a {
  text-decoration: none;
}

body #welcome li a, body #welcome li > span {
  padding: 4px 10px;
  font-weight: 500;
  color: #1d5985;
  transition: all 0.1s ease-in;
}
body #welcome li.operation span {
  font-style: italic;
}

body #welcome li a span:hover {
  color: #f0faff;
  background-color: #a7c8e1;
}

body #welcome .preview {
  font-size: small;
}

footer {
  border-top: .5px solid;
  margin-top: 44px;
  padding-top: 22px;
  width: 400px;
  font-size: 90%;
}

@media (prefers-color-scheme: dark) {
  body { background: #0a2138; }

  body #welcome h1, #welcome h3, #welcome h2, #welcome p {
      color: #a6c1d9;
  }
  body #welcome h3 a {
      color: #e2efff;
  }
  body #welcome ul {
      background: #7894ad;
  }
  body #welcome li {
      background-color: #506d88;
  }
  body #welcome li a, body #welcome li:hover div:not(:first-child) a, body #welcome li > span {
      color: #d0e4f2;
  }
  body #welcome li a:hover {
      color: white;
      background-color: #7894ad;
  }

  body #welcome h3.header {
      background-color: #304c65;
  }

  footer {
      border-top: .5px solid #456;
      color: #567;
  }
}
        </style>
    </head>
    <body>
        <div id="welcome">
            <h1> Welcome to <i>@sap/cds</i> Server </h1>
            <p class="subtitle"> Serving @cap-js-community/sap-afc-sdk 0.1.0 </p>

            <p> These are the paths currently served:</p>

            <h2> Web Applications: </h2>
            <ul>
                <li><a href="flp.html"><span>/flp.html</span></a></li>
<li><a href="scheduling.monitoring.job/webapp/index.html"><span>/scheduling.monitoring.job/webapp</span></a></li>
<li><a href="/scheduling.monitoring.job"><span>/scheduling.monitoring.job</span></a></li>
            </ul>

            <h2> Service Endpoints: </h2>
            
      <div id="schedulingwebsocketservice-ws">
        <h3 class="header">
          <a href="/ws/job-scheduling"><span>/ws/job-scheduling</span></a> 
        </h3>
        <ul>
        </ul>
        <ul>
        </ul>
      </div>
  
      <div id="featureservice-rest">
        <h3 class="header">
          <a href="/rest/feature"><span>/rest/feature</span></a> 
        </h3>
        <ul>
        </ul>
        <ul>
          <li id="featureservice-rest-state" class="operation">
            <div>
              <a href="/rest/feature/state()" title="/rest/feature/state()"><span>state()</span></a>
            </div>
          </li>
        </ul>
      </div>
  
      <div id="schedulingmonitoringservice-odata">
        <h3 class="header">
          <a href="/srv/job-scheduling/monitoring"><span>/srv/job-scheduling/monitoring</span></a><span>/</span> <a href="/srv/job-scheduling/monitoring/$metadata"><span>$metadata</span></a> 
        </h3>
        <ul>
          <li id="schedulingmonitoringservice-odata-jobdefinition">
            <div>
              <a href="/srv/job-scheduling/monitoring/JobDefinition"><span>JobDefinition</span></a>
            </div>
            <div><a href="/$fiori-preview/SchedulingMonitoringService/JobDefinition#preview-app"><span class="preview" title="Preview in Fiori elements">Fiori preview</span></a></div>
          </li>
          <li id="schedulingmonitoringservice-odata-jobparameterdefinition">
            <div>
              <a href="/srv/job-scheduling/monitoring/JobParameterDefinition"><span>JobParameterDefinition</span></a>
            </div>
            <div><a href="/$fiori-preview/SchedulingMonitoringService/JobParameterDefinition#preview-app"><span class="preview" title="Preview in Fiori elements">Fiori preview</span></a></div>
          </li>
          <li id="schedulingmonitoringservice-odata-job">
            <div>
              <a href="/srv/job-scheduling/monitoring/Job"><span>Job</span></a>
            </div>
            <div><a href="/$fiori-preview/SchedulingMonitoringService/Job#preview-app"><span class="preview" title="Preview in Fiori elements">Fiori preview</span></a></div>
          </li>
          <li id="schedulingmonitoringservice-odata-jobparameter">
            <div>
              <a href="/srv/job-scheduling/monitoring/JobParameter"><span>JobParameter</span></a>
            </div>
            <div><a href="/$fiori-preview/SchedulingMonitoringService/JobParameter#preview-app"><span class="preview" title="Preview in Fiori elements">Fiori preview</span></a></div>
          </li>
          <li id="schedulingmonitoringservice-odata-jobresult">
            <div>
              <a href="/srv/job-scheduling/monitoring/JobResult"><span>JobResult</span></a>
            </div>
            <div><a href="/$fiori-preview/SchedulingMonitoringService/JobResult#preview-app"><span class="preview" title="Preview in Fiori elements">Fiori preview</span></a></div>
          </li>
          <li id="schedulingmonitoringservice-odata-jobresultmessage">
            <div>
              <a href="/srv/job-scheduling/monitoring/JobResultMessage"><span>JobResultMessage</span></a>
            </div>
            <div><a href="/$fiori-preview/SchedulingMonitoringService/JobResultMessage#preview-app"><span class="preview" title="Preview in Fiori elements">Fiori preview</span></a></div>
          </li>
          <li id="schedulingmonitoringservice-odata-jobstatus">
            <div>
              <a href="/srv/job-scheduling/monitoring/JobStatus"><span>JobStatus</span></a>
            </div>
            <div><a href="/$fiori-preview/SchedulingMonitoringService/JobStatus#preview-app"><span class="preview" title="Preview in Fiori elements">Fiori preview</span></a></div>
          </li>
          <li id="schedulingmonitoringservice-odata-jobresulttype">
            <div>
              <a href="/srv/job-scheduling/monitoring/JobResultType"><span>JobResultType</span></a>
            </div>
            <div><a href="/$fiori-preview/SchedulingMonitoringService/JobResultType#preview-app"><span class="preview" title="Preview in Fiori elements">Fiori preview</span></a></div>
          </li>
          <li id="schedulingmonitoringservice-odata-parametertype">
            <div>
              <a href="/srv/job-scheduling/monitoring/ParameterType"><span>ParameterType</span></a>
            </div>
            <div><a href="/$fiori-preview/SchedulingMonitoringService/ParameterType#preview-app"><span class="preview" title="Preview in Fiori elements">Fiori preview</span></a></div>
          </li>
          <li id="schedulingmonitoringservice-odata-datatype">
            <div>
              <a href="/srv/job-scheduling/monitoring/DataType"><span>DataType</span></a>
            </div>
            <div><a href="/$fiori-preview/SchedulingMonitoringService/DataType#preview-app"><span class="preview" title="Preview in Fiori elements">Fiori preview</span></a></div>
          </li>
          <li id="schedulingmonitoringservice-odata-mappingtype">
            <div>
              <a href="/srv/job-scheduling/monitoring/MappingType"><span>MappingType</span></a>
            </div>
            <div><a href="/$fiori-preview/SchedulingMonitoringService/MappingType#preview-app"><span class="preview" title="Preview in Fiori elements">Fiori preview</span></a></div>
          </li>
          <li id="schedulingmonitoringservice-odata-messageseverity">
            <div>
              <a href="/srv/job-scheduling/monitoring/MessageSeverity"><span>MessageSeverity</span></a>
            </div>
            <div><a href="/$fiori-preview/SchedulingMonitoringService/MessageSeverity#preview-app"><span class="preview" title="Preview in Fiori elements">Fiori preview</span></a></div>
          </li>
        </ul>
        <ul>
        </ul>
      </div>
  
      <div id="schedulingproviderservice-rest">
        <h3 class="header">
          <a href="/api/job-scheduling/v1"><span>/api/job-scheduling/v1</span></a> <span><a href="/api-docs/api/job-scheduling/v1"><span class="preview" title="Show in Swagger UI">Open API</span></a></span>
        </h3>
        <ul>
          <li id="schedulingproviderservice-rest-jobdefinition">
            <div>
              <a href="/api/job-scheduling/v1/JobDefinition"><span>JobDefinition</span></a>
            </div>
            <div><a href="/api-docs/api/job-scheduling/v1"><span class="preview" title="Show in Swagger UI">Open API</span></a></div>
          </li>
          <li id="schedulingproviderservice-rest-jobparameterdefinition">
            <div>
              <a href="/api/job-scheduling/v1/JobParameterDefinition"><span>JobParameterDefinition</span></a>
            </div>
            <div><a href="/api-docs/api/job-scheduling/v1"><span class="preview" title="Show in Swagger UI">Open API</span></a></div>
          </li>
          <li id="schedulingproviderservice-rest-job">
            <div>
              <a href="/api/job-scheduling/v1/Job"><span>Job</span></a>
            </div>
            <div><a href="/api-docs/api/job-scheduling/v1"><span class="preview" title="Show in Swagger UI">Open API</span></a></div>
          </li>
          <li id="schedulingproviderservice-rest-jobparameter">
            <div>
              <a href="/api/job-scheduling/v1/JobParameter"><span>JobParameter</span></a>
            </div>
            <div><a href="/api-docs/api/job-scheduling/v1"><span class="preview" title="Show in Swagger UI">Open API</span></a></div>
          </li>
          <li id="schedulingproviderservice-rest-jobresult">
            <div>
              <a href="/api/job-scheduling/v1/JobResult"><span>JobResult</span></a>
            </div>
            <div><a href="/api-docs/api/job-scheduling/v1"><span class="preview" title="Show in Swagger UI">Open API</span></a></div>
          </li>
          <li id="schedulingproviderservice-rest-jobresultmessage">
            <div>
              <a href="/api/job-scheduling/v1/JobResultMessage"><span>JobResultMessage</span></a>
            </div>
            <div><a href="/api-docs/api/job-scheduling/v1"><span class="preview" title="Show in Swagger UI">Open API</span></a></div>
          </li>
        </ul>
        <ul>
        </ul>
      </div>
  

            <footer>
                This is an automatically generated page. <br>
                You can replace it with a custom <code>./app/index.html</code>.
            </footer>
        </div>

    </body>
</html>
"
`;
